<resources>
    <string name="app_name">חנות שלי</string>
    <string name="userLogin">כניסת משתמש</string>
    <string name="productName">שם המוצר</string>
    <string name="productPrice">מחיר המוצר</string>
    <string name="addToShoppingCard">הוסף לסל קניות</string>
    <string name="discount">הנחה</string>
    <string name="listErrorMsg">שגיאה בהבאת הנתונים</string>
    <string name="shoppingCard">סל הקניות</string>
    <string name="message">הודעה</string>
    <string name="goToLeft"><![CDATA[>]]></string>
    <string name="goToRight"><![CDATA[<]]></string>
    <string name="pleaseWait">נא המתן...</string>
    <string name="productColor">צבע</string>
    <string name="companyName">שם חברה</string>
    <string name="gender">מין</string>
    <string name="cheap">הנחה</string>
    <string name="image">תמונה</string>
    <string name="pay">קנה</string>
    <string name="finalPrice">מחיר סופי</string>
    <string name="range">מידות</string>
    <string name="firstName">שם שלך</string>
    <string name="lastName">שם משפחה</string>
    <string name="mail">מיל שלך</string>
    <string name="phone">נייד שלך</string>
    <string name="city">עיר</string>
    <string name="street">שד\'</string>
    <string name="homeNumber">מס\' דירה</string>
    <string name="postilCode">מיקוד</string>
    <string name="poPost">ת.ד</string>
    <string name="registerMe">רשום אותי</string>
    <string name="yourPass">סיסמה שלך</string>
    <string name="invaledUser">משתמש לא קיים</string>
    <string name="enter">כניסה</string>
    <string name="forgetPassTxt">שכחתם סיסמה?לא נורה!</string>
    <string name="pressHere">לחץ.י כאן</string>
    <string name="forgetMailTxt">אם שכחתה את המיל שלך נא</string>
    <string name="goT">go To Pay Page</string>
    <string name="shipping">משלוח</string>
    <string name="orderNum">הזמנה מספר :</string>
    <string name="noNum">אין מספר!</string>
    <string name="continueToProducts">המשך למוצרים</string>
    <string name="myOrders">הזמנות שלי</string>
    <string name="searchProduct">חיפוש מוצר</string>
    <string name="alertYourMail">האם זהו המיל שלך?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="developerMail">hasasana68@gmail.com</string>
    <string name="noProducts">אין מוצרים</string>
    <string name="sms">רוצה לקבל הודעות SMS</string>
    <string name="agreeMail">רוצה לקבל הודעות מיל</string>
    <string name="forgetPass">שכחתי סיסמה</string>
    <string name="cancel">ביטול</string>
    <string name="ok">אישור</string>
    <string name="freeShipping">משלוח חינם</string>
    <string name="thanksForBuy">תודה שקניתם אצלינו, הקבלה תשלח אליכם עם המוצר!</string>
    <string name="noOrderNum">עוד אין לכם הזמנה!</string>
    <string name="choose">בחר</string>
    <string name="noQuantity">אין כמות למידה הזאת. נבקשך ליצור קשר איתנו</string>
    <string name="newUser">משתמש חדש</string>
    <string name="PanelUpdateUser">עדכון נתוני המשתמש</string>
    <string name="yourName">שם שלך</string>
    <string name="update">עדכן</string>
    <string name="lookingBeforeUpdateUserInfo">לפני עדכון רצוי מאוד ומומלץ אפילו להביט על הנתונים אם יש משהו לא תקין לשנות לפני עדכון- במיוחד אם נגעתם בכתובת - להבטחת קבלת המשלוח אחרי קניה!</string>
    <string name="connectOurNetWork">נא להתחבר לרשת שלנו בלבד!</string>


</resources>
