<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:text="@string/alertYourMail"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/yourMail_yesNoDialog"
        android:layout_width="wrap_content"
        android:background="@color/red"
        android:ems="12"
        android:textSize="20sp"
        android:text="@string/developerMail"
        android:textAlignment="center"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton_yesNoDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>

        <Button
            android:id="@+id/noButton_yesNoDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"/>

    </LinearLayout>

</LinearLayout>