<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgetPass"
        android:textAlignment="center"
        android:textSize="32sp"

        />

    <EditText
        android:id="@+id/forgetPassET_forgetPasswordUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forgetPass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/forgetPassCancelButton_forgetPasswordUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>


        <Button
            android:id="@+id/forgetPassOkButton_forgetPasswordUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>