<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/orderNumTV_orderInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderNum"
        android:textSize="30sp"
        android:layout_marginTop="10dp"

        />

        <TextView
            android:id="@+id/orderNum_orderInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noNum"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/red"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/red">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="תודה שקניתם אצלינו, הקבלה תשלח אליכם עם המוצר!"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/shoppingCardButton-orderInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoppingCard"
           android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:textColor="@color/blue"/>

        <Button
            android:id="@+id/continueToProductsButton_orderInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueToProducts"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_alignBaseline="@id/shoppingCardButton-orderInfo"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/userOrdersButton_orderInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myOrders"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/shoppingCardButton-orderInfo"
            android:layout_marginTop="20dp"/>



    </RelativeLayout>

</LinearLayout>